django-3tier-eks/networkpolicy/np-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy3
  namespace: db-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: was

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
