django-3tier-eks/networkpolicy/np-was.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy2
  namespace: was-ns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: db
        - namespaceSelector:
            matchLabels:
              app: nginx
      

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
